Ajustes DB y seed
