# api.yml
@@ -185,10 +185,6 @@ definitions:
         type: string
       age:
         type: integer
-      gender:
-        type: string
-      reputation:
-        type: number
       email:
         type: string
       password_digest:
@@ -206,10 +202,6 @@ definitions:
         type: string
       age:
         type: integer
-      gender:
-        type: string
-      reputation:
-        type: number
       email:
         type: string
       password_digest:
