# app/models/user.rb
@@ -6,8 +6,6 @@
 #  name            :string
 #  document        :string
 #  age             :integer
-#  gender          :string
-#  reputation      :float
 #  email           :string
 #  password_digest :string
 #  created_at      :datetime         not null
@@ -24,22 +22,22 @@ class User < ApplicationRecord
 
     # Query that gets all the users
     def self.get_all_users
-        self.all.select(:id, :name, :document, :age, :gender, :reputation, :email, :password_digest)
+        self.all.select(:id, :name, :document, :age, :email, :password_digest)
     end
 
     # Query that gets the user corresponding to the id
     def self.get_user_by_id(current_id)
-        self.where(id: current_id).select(:id, :name, :document, :age, :gender, :reputation, :email, :password_digest).first
+        self.where(id: current_id).select(:id, :name, :document, :age, :email, :password_digest).first
     end
 
     # Query that gets the user corresponding to the email
     def self.get_user_by_email(current_email)
-        self.where(email: current_email).select(:id, :name, :document, :age, :gender, :reputation, :email, :password_digest).first
+        self.where(email: current_email).select(:id, :name, :document, :age, :email, :password_digest).first
     end
 
     # Query that updates an existing user record in DB
     def self.update_user(user_params, id_user)
-        user = self.where(id: id_user).select(:id, :name, :document, :age, :gender, :reputation, :email, :password_digest).first
+        user = self.where(id: id_user).select(:id, :name, :document, :age, :email, :password_digest).first
 
         if user && user.update!(user_params) # If the user was updated successfully
             return user # Return the updated user
@@ -50,7 +48,7 @@ class User < ApplicationRecord
 
     # Query that deletes an existing user record in DB
     def self.delete_user(id_user)
-        user = self.where(id: id_user).select(:id, :name, :document, :age, :gender, :reputation, :email, :password_digest).first
+        user = self.where(id: id_user).select(:id, :name, :document, :age, :email, :password_digest).first
 
         if user && user.destroy # If the user was deleted successfully
             return user # Return the deleted user
@@ -69,9 +67,6 @@ class User < ApplicationRecord
     validates :document, presence: true, length: { in: 1..20 } # Document with 1-20 characters
     validates :age, presence: true, numericality: { only_integer: true,
         greater_than_or_equal_to: 1, less_than_or_equal_to: 140 } # Age between 1-140
-    validates :gender, presence: true, length: { in: 1..10 } # Gender with 1-10 characters
-    validates :reputation, presence: true, numericality: { greater_than_or_equal_to: 0, 
-        less_than_or_equal_to: 5 } # Reputation between 0-5
     validates :email, presence: true, length: { in: 6..100 },
         format: { with: URI::MailTo::EMAIL_REGEXP } # Email with 6-100 characters and email format
 
